--- a/RXVBackDL/RXVBackDL.csproj
+++ b/RXVBackDL/RXVBackDL.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DBMarkups\" />
+  </ItemGroup>
+
 </Project>
