--- a/RXVBack/appsettings.json
+++ b/RXVBack/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MSSQLServer": "Server=localhost;Database=revapidb;Trusted_Connection=True;",
+    "MySQL": ""
+  }
 }
