--- a/RXVBack/Properties/launchSettings.json
+++ b/RXVBack/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "/api/neuronet/index",
+      "launchUrl": "api/neuronet/index",
       "applicationUrl": "https://localhost:7078;http://localhost:5078",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "/api/neuronet/index",
+      "launchUrl": "api/neuronet/index",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
